manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f dc.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: installer
  name: installer
  namespace: installer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: installer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f dc.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: installer
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: installer-config
            optional: false
        - secretRef:
            name: installer-creds
            optional: true
        image: nicholaswilde/installer:0.2.7
        imagePullPolicy: ""
        name: installer
        ports:
        - containerPort: 3000
          protocol: UDP
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
